# httpfile-rs

./: Cargo.toml  README.md  justfile
httpfile/: Cargo.toml
httpfile-build/: Cargo.toml  index.http
httpfile-build/src/: lib.rs  models.rs  parser.rs
httpfile-demo/: Cargo.toml  build.rs  index.http
httpfile-demo/src/: httpbin.rs  main.rs
httpfile/src/: lib.rs
