[package]
name = "httpfile-demo"
version = "0.1.0"
edition = "2021"

[workspace]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httpfile = { path = "../httpfile" }
reqwest = "0.11"
tokio = { version = "1.20", features = ["full"] }

[build-dependencies]
httpfile-build = { path = "../httpfile-build" }
