[package]
name = "httpfile-demo"
version = "0.1.0"
edition = "2021"

[workspace]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httpfile = { path = "../httpfile" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
httpfile-build = { path = "../httpfile-build" }
